--- a/menu.html
+++ b/menu.html
@@ -39,24 +39,21 @@
             <hr>
             <div class="container">
                 <div class="pietanza">
-                    <p>Panzarotti..................2,00€</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit aut, quibusdam autem saepe nobis molestias. (2pz)</p>
+                    <p>Bresaola rucola parmigiano e pomodorini............10,00€</p>
                 </div>
                 <br>
                 <div class="pietanza">
-                    <p>Panzarotti..................2,00€</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse voluptas possimus illo aspernatur aperiam deserunt. (2pz)</p>
+                    <p>Polpettine al sugo............--,00€</p>
                 </div>
                 <br>
                 <div class="pietanza">
-                    <p>Panzarotti..................2,00€</p>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquid illo iure adipisci ratione, distinctio exercitationem. (2pz)</p>
+                    <p>Polpettine rapa e patate con fonduta di caciocavallo......--,00€</p>
                 </div>
             </div>
             <br>
             <div class="container">
                 <div class="pietanza">
-                    <p>Panzarotti..................2,00€</p>
+                    <p>Polpettine bacon e provola con fonduta di caciocavallo..................--,00€</p>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit aut, quibusdam autem saepe nobis molestias. (2pz)</p>
                 </div>
                 <br>
