--- a/menu.html
+++ b/menu.html
@@ -37,34 +37,99 @@
         <div class="box">
             <p class="title">Antipasti & Fritti</p>
             <hr>
-            <div class="container">
+            <div class="container-menu">
                 <div class="pietanza">
-                    <p>Bresaola rucola parmigiano e pomodorini............10,00€</p>
+                    <p>Bresaola rucola parmigiano e pomodorini ............ 10,00€</p>
                 </div>
                 <br>
-                <div class="pietanza">
-                    <p>Polpettine al sugo............--,00€</p>
-                </div>
                 <br>
                 <div class="pietanza">
-                    <p>Polpettine rapa e patate con fonduta di caciocavallo......--,00€</p>
-                </div>
-            </div>
-            <br>
-            <div class="container">
-                <div class="pietanza">
-                    <p>Polpettine bacon e provola con fonduta di caciocavallo..................--,00€</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit aut, quibusdam autem saepe nobis molestias. (2pz)</p>
+                    <p>Polpettine al sugo ............ 3pz 4,00€ / 5pz 6,00€</p>
                 </div>
                 <br>
-                <div class="pietanza">
-                    <p>Panzarotti..................2,00€</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse voluptas possimus illo aspernatur aperiam deserunt. (2pz)</p>
-                </div>
                 <br>
                 <div class="pietanza">
-                    <p>Panzarotti..................2,00€</p>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquid illo iure adipisci ratione, distinctio exercitationem. (2pz)</p>
+                    <p>Polpettine rapa e patate con fonduta di caciocavallo ............ 3pz 4,00€- 5pz 6,00€</p>
+                </div>
+                <br>
+                <br>
+                <div class="pietanza">
+                    <p>Polpettine bacon e provola con fonduta di caciocavallo .................. 3pz 4,00€- 5pz 6,00€</p>
+                </div>
+                <br>
+                <br>
+                <div class="pietanza">
+                    <p>Frittatina cacio e pepe .................. 3,00€</p>
+                </div>
+                <br>
+                <br>
+                <div class="pietanza">
+                    <p>Frittatina pasta patate e provola 3€ .................. 3,00€</p>
+                </div>
+                <br>
+                <br>
+                <div class="pietanza">
+                    <p>Frittatina mortadella e pistacchio .................. 3,00€</p>
+                </div>
+                <br>
+                <br>
+                <div class="pietanza">
+                    <p>Crocchè Classico .................. 1,00€</p>
+                </div>
+                <br>
+                <br>
+                <div class="pietanza">
+                    <p>Crocchettone mortadella e pistacchio .................. 4,00€</p>
+                </div>
+                <br>
+                <br>
+                <div class="pietanza">
+                    <p>crocchettone cacio e pepe con fonduta di caciocavallo .................. 4,00€</p>
+                </div>
+                <br>
+                <br>
+                <div class="pietanza">
+                    <p>Montanara pomodoro e parmigiano .................. 6,00€</p>
+                </div>
+                <br>
+                <br>
+                <div class="pietanza">
+                    <p>Montanara mortadella e pistacchio .................. 6,00€</p>
+                </div>
+                <br>
+                <br>
+                <div class="pietanza">
+                    <p>Montanara crema al tartufo e porcini .................. 6,00€</p>
+                </div>
+                <br>
+                <br>
+                <div class="pietanza">
+                    <p>Montanara crema di piselli e pancetta .................. 6,00€</p>
+                </div>
+                <br>
+                <br>
+                <div class="pietanza">
+                    <p>Arancino porcini e provola .................. 2,50€</p>
+                </div>
+                <br>
+                <br>
+                <div class="pietanza">
+                    <p>Patatina fritta stick .................. 2,50€</p>
+                </div>
+                <br>
+                <br>
+                <div class="pietanza">
+                    <p>Patatina fritta dippers .................. 3,00€</p>
+                </div>
+                <br>
+                <br>
+                <div class="pietanza">
+                    <p>Patatina fritta con wurstel .................. 4,00€</p>
+                </div>
+                <br>
+                <br>
+                <div class="pietanza">
+                    <p>Patatina fritta con bacon e cheddar 4,50 € .................. 4,50€</p>
                 </div>
             </div>
         </div>
