--- a/menu.html
+++ b/menu.html
@@ -42,94 +42,76 @@
                     <p>Bresaola rucola parmigiano e pomodorini ............ 10,00€</p>
                 </div>
                 <br>
-                <br>
                 <div class="pietanza">
                     <p>Polpettine al sugo ............ 3pz 4,00€ / 5pz 6,00€</p>
                 </div>
-                <br>
                 <br>
                 <div class="pietanza">
                     <p>Polpettine rapa e patate con fonduta di caciocavallo ............ 3pz 4,00€- 5pz 6,00€</p>
                 </div>
                 <br>
-                <br>
                 <div class="pietanza">
                     <p>Polpettine bacon e provola con fonduta di caciocavallo .................. 3pz 4,00€- 5pz 6,00€</p>
                 </div>
-                <br>
                 <br>
                 <div class="pietanza">
                     <p>Frittatina cacio e pepe .................. 3,00€</p>
                 </div>
                 <br>
-                <br>
                 <div class="pietanza">
                     <p>Frittatina pasta patate e provola 3€ .................. 3,00€</p>
                 </div>
-                <br>
                 <br>
                 <div class="pietanza">
                     <p>Frittatina mortadella e pistacchio .................. 3,00€</p>
                 </div>
                 <br>
-                <br>
                 <div class="pietanza">
                     <p>Crocchè Classico .................. 1,00€</p>
                 </div>
-                <br>
                 <br>
                 <div class="pietanza">
                     <p>Crocchettone mortadella e pistacchio .................. 4,00€</p>
                 </div>
                 <br>
-                <br>
                 <div class="pietanza">
-                    <p>crocchettone cacio e pepe con fonduta di caciocavallo .................. 4,00€</p>
+                    <p>Crocchettone cacio e pepe con fonduta di caciocavallo .................. 4,00€</p>
                 </div>
-                <br>
                 <br>
                 <div class="pietanza">
                     <p>Montanara pomodoro e parmigiano .................. 6,00€</p>
                 </div>
                 <br>
-                <br>
                 <div class="pietanza">
                     <p>Montanara mortadella e pistacchio .................. 6,00€</p>
                 </div>
-                <br>
                 <br>
                 <div class="pietanza">
                     <p>Montanara crema al tartufo e porcini .................. 6,00€</p>
                 </div>
                 <br>
-                <br>
                 <div class="pietanza">
                     <p>Montanara crema di piselli e pancetta .................. 6,00€</p>
                 </div>
-                <br>
                 <br>
                 <div class="pietanza">
                     <p>Arancino porcini e provola .................. 2,50€</p>
                 </div>
                 <br>
-                <br>
                 <div class="pietanza">
                     <p>Patatina fritta stick .................. 2,50€</p>
                 </div>
-                <br>
                 <br>
                 <div class="pietanza">
                     <p>Patatina fritta dippers .................. 3,00€</p>
                 </div>
                 <br>
-                <br>
                 <div class="pietanza">
                     <p>Patatina fritta con wurstel .................. 4,00€</p>
                 </div>
                 <br>
-                <br>
                 <div class="pietanza">
-                    <p>Patatina fritta con bacon e cheddar 4,50 € .................. 4,50€</p>
+                    <p>Patatina fritta con bacon e cheddar .................. 4,50€</p>
                 </div>
             </div>
         </div>
