--- a/menu.html
+++ b/menu.html
@@ -35,7 +35,7 @@
 
    <section id="menu">
         <div class="box">
-            <p class="title">Antipasti & Fritti</p>
+            <p class="title"> & Fritti</p>
             <hr>
             <div class="container-menu">
                 <div class="pietanza">
