--- a/menu.html
+++ b/menu.html
@@ -35,7 +35,7 @@
 
    <section id="menu">
         <div class="box">
-            <p class="title"> & Fritti</p>
+            <p class="title">Antipasti & Fritti</p>
             <hr>
             <div class="container-menu">
                 <div class="pietanza">
@@ -116,7 +116,265 @@
             </div>
         </div>
    </section>
-  
+   <section id="menu">
+    <div class="box">
+        <br>
+        <p class="title">Pizze</p>
+        <hr>
+        <div class="container-menu">
+            <div class="pietanza">
+                <p>Marinara ............ 4,50€</p>
+                <p>Pomodoro, origano, aglio acciughe olive</p>
+            </div>
+            <br>
+            <div class="pietanza">
+                <p>Margherita ............ 5,00€</p>
+                <p>Pomodoro, mozzarella, basilico e olio evo</p>
+            </div>
+            <br>
+            <div class="pietanza">
+                <p>Diavola ............ 6,00€</p>
+                <p>Pomodoro, spianata piccante, mozzarella, basilico e olio evo</p>
+            </div>
+            <br>
+            <div class="pietanza">
+                <p>Bufalina ............ 6,50€</p>
+                <p>Pomodoro, mozzarella di bufala, basilico e olio evo</p>
+            </div>
+            <br>
+            <div class="pietanza">
+                <p>Capricciosa ............ 7,50€</p>
+                <p>Pomodoro, carciofi, olive, salame, prosciutto cotto, funghi, basilico e olio evo</p>
+            </div>
+            <br>
+            <div class="pietanza">
+                <p>Americana ............ 7,00€</p>
+                <p>Mozzarella , wurstel, patatine, basilico e olio evo</p>
+            </div>
+            <br>
+            <div class="pietanza">
+                <p>Salsiccia e friarielli ............ 7,00€</p>
+                <p>Mozzarella, salsiccia, friarielli e olio evo</p>
+            </div>
+            <br>
+            <div class="pietanza">
+                <p>Crocco pizza ............ 8,50€</p>
+                <p>Patate al forno, provola, pancetta, funghi, crocchè, basilico e olio evo)</p>
+            </div>
+            <br>
+            <div class="pietanza">
+                <p>Ortolana ............ 7,00€</p>
+                <p>Peperoni, melanzane, mozzarella, basilico e olio evo</p>
+            </div>
+            <br>
+            <div class="pietanza">
+                <p>4 Formaggi ............ 8,00€</p>
+                <p>Caciocavallo, gorgonzola, emmenthal, parmigiano, basilico e olio evo</p>
+            </div>
+            <br>
+            <div class="pietanza">
+                <p>Bronte ............ 9,00€</p>
+                <p>Crema di pistacchio, mozzarella , mortadella, stracciata, basilico e olio evo</p>
+            </div>
+            <br>
+            <div class="pietanza">
+                <p>Mimosa ............ 7,00€</p>
+                <p>Panna, mais, prosciutto, cotto, basilico e olio evo</p>
+            </div>
+            <br>
+            <div class="pietanza">
+                <p>Fiocco ............ 7,50€</p>
+                <p>Mozzarella, vellutata di patate, prosciutto cotto, pepe, basilico e olio evo</p>
+            </div>
+            <br>
+            <div class="pietanza">
+                <p>Paesana ............ 8,00€</p>
+                <p>Mozzarella, patate schiacciate, salsiccia e olio evo</p>
+            </div>
+            <br>
+            <div class="pietanza">
+                <p>Noemi ............ 10,00€</p>
+                <p>Cornicione ripieno di ricotta, mozzarella, polpettine di carne, fonduta di parmigiano,
+                    basilico e olio evo</p>
+            </div>
+            <br>
+            <div class="pietanza">
+                <p>Anthony ............ 8,00€</p>
+                <p>Pomodoro, mozzarella, melanzane fritte, fonduta di parmigiano, basilico e olio evo</p>
+            </div>
+            <br>
+            <div class="pietanza">
+                <p>Alessandro ............ 9,50€</p>
+                <p>Mozzarella, bresaola, pomodorini, rucola, scaglie di grana e olio evo</p>
+            </div>
+            <br>
+            <div class="pietanza">
+                <p>Dalia ............ 7,00€</p>
+                <p>Crema di tartufo, salsiccia, funghi porcini, provola, basilico e olio evo</p>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section id="menu">
+    <div class="box">
+        <br>
+        <p class="title">Ripieni</p>
+        <hr>
+        <div class="container-menu">
+            <div class="pietanza">
+                <p>Calzone al forno ............ 7,00€</p>
+                <p>Salame, ricotta, mozzarella, pomodoro</p>
+            </div>
+            <br>
+            <div class="pietanza">
+                <p>Calzone fritto ............ 7,00€</p>
+                <p>Prosciutto cotto, ricotta, mozzarella, pomodoro</p>
+            </div>
+            <br>
+            <div class="pietanza">
+                <p>Tronchetto ............ 9,00€</p>
+                <p>Emmenthal , mozzarella, prosciutto crudo scaglie di parmigiano, rucola e pomodorini</p>
+            </div>
+        </div>
+    </div>
+</section>
+
+
+<section id="menu">
+    <div class="box">
+        <br>
+        <p class="title">Saltimbocca</p>
+        <hr>
+        <div class="container-menu">
+            <div class="pietanza">
+                <p>Prosciutto crudo mozzarella e pomodorini ............ 7,00€</p>
+            </div>
+            <br>
+            <div class="pietanza">
+                <p>Bresaola rucola e scaglie di parmigiano ............ 8,00€</p>
+            </div>
+            <br>
+            <div class="pietanza">
+                <p>Salsiccia friarielli e provola ............ 7,00€</p>
+            </div>
+            <br>
+            <div class="pietanza">
+                <p>Porchetta provola e patatine ............ 7,50€</p>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section id="menu">
+    <div class="box">
+        <br>
+        <p class="title">Dolci</p>
+        <hr>
+        <div class="container-menu">
+            <div class="pietanza">
+                <p>Cannolo scomposto ............ 4,00€</p>
+            </div>
+            <br>
+            <div class="pietanza">
+                <p>Tiramisù ............ 4,00€</p>
+            </div>
+            <br>
+            <div class="pietanza">
+                <p>Cuore caldo ............ 4,00€</p>
+            </div>
+            <br>
+            <div class="pietanza">
+                <p>Porchetta provola e patatine ............ 7,50€</p>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section id="menu">
+    <div class="box">
+        <br>
+        <p class="title">Bibite</p>
+        <hr>
+        <div class="container-menu">
+            <div class="pietanza">
+                <p>Acqua naturale ............ 2,50€</p>
+            </div>
+            <br>
+            <div class="pietanza">
+                <p>Acqua frizzante ............ 2,00€</p>
+            </div>
+            <br>
+            <div class="pietanza">
+                <p>Coca Cola in bottiglia ............ 3,00€</p>
+            </div>
+            <br>
+            <div class="pietanza">
+                <p>Heineken 33 cl ............ 3,00€</p>
+            </div>
+            <br>
+            <div class="pietanza">
+                <p>Heineken 66 cl ............ 5,00€</p>
+            </div>
+            <br>
+            <div class="pietanza">
+                <p>Ceres ............ 4,00€</p>
+            </div>
+            <br>
+            <div class="pietanza">
+                <p>Tennent’s ............ 4,00€</p>
+            </div>
+            <br>
+            <div class="pietanza">
+                <p>Birra alla spina stella artois piccola ............ 3,00€</p>
+            </div>
+            <br>
+            <div class="pietanza">
+                <p>Birra alla spina stella artois grande ............ 5,00€</p>
+            </div>
+            <br>
+            <div class="pietanza">
+                <p>Birra alla spina leffe rossa piccola ............ 3,00€</p>
+            </div>
+            <br>
+            <div class="pietanza">
+                <p>Birra alla spina leffe rossa grande ............ 5,00€</p>
+            </div>
+            <br>
+            <div class="pietanza">
+                <p>Vino bianco frizzante Pizza Wine ............ 12,00€</p>
+            </div>
+            <br>
+            <div class="pietanza">
+                <p>Vino rosso frizzante Gragnano ............ 15,00€</p>
+            </div>
+            <br>
+            <div class="pietanza">
+                <p>Coperto ............ 2,50€</p>
+            </div>
+        </div>
+    </div>
+</section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
     <footer>
         <div class="foot">
