--- a/menu.html
+++ b/menu.html
@@ -159,7 +159,7 @@
             <br>
             <div class="pietanza">
                 <p>Crocco pizza ............ 8,50€</p>
-                <p>Patate al forno, provola, pancetta, funghi, crocchè, basilico e olio evo)</p>
+                <p>Patate al forno, provola, pancetta, funghi, crocchè, basilico e olio evo</p>
             </div>
             <br>
             <div class="pietanza">
