--- a/menu.html
+++ b/menu.html
@@ -79,6 +79,10 @@
                 </div>
                 <br>
                 <div class="pietanza">
+                    <p>Arancino porcini e provola .................. 2,50€</p>
+                </div>
+                <br>
+                <div class="pietanza">
                     <p>Montanara pomodoro e parmigiano .................. 6,00€</p>
                 </div>
                 <br>
@@ -123,12 +127,12 @@
         <hr>
         <div class="container-menu">
             <div class="pietanza">
-                <p>Marinara ............ 4,50€</p>
+                <p>Marinara ............ 4,00€</p>
                 <p>Pomodoro, origano, aglio acciughe olive</p>
             </div>
             <br>
             <div class="pietanza">
-                <p>Margherita ............ 5,00€</p>
+                <p>Margherita ............ 4,50€</p>
                 <p>Pomodoro, mozzarella, basilico e olio evo</p>
             </div>
             <br>
@@ -153,12 +157,17 @@
             </div>
             <br>
             <div class="pietanza">
+                <p>Tonnarella ............ 7,00€</p>
+                <p>Mozzarella, tonno, cipolla, basilico e olio evo</p>
+            </div>
+            <br>
+            <div class="pietanza">
                 <p>Salsiccia e friarielli ............ 7,00€</p>
                 <p>Mozzarella, salsiccia, friarielli e olio evo</p>
             </div>
             <br>
             <div class="pietanza">
-                <p>Crocco pizza ............ 8,50€</p>
+                <p>Crocco-pizza ............ 8,50€</p>
                 <p>Patate al forno, provola, pancetta, funghi, crocchè, basilico e olio evo</p>
             </div>
             <br>
@@ -193,9 +202,13 @@
             </div>
             <br>
             <div class="pietanza">
+                <p>Pizzatella ............ 6,00€</p>
+                <p>Nutella e zucchero a velo</p>
+            </div>
+            <br>
+            <div class="pietanza">
                 <p>Noemi ............ 10,00€</p>
-                <p>Cornicione ripieno di ricotta, mozzarella, polpettine di carne, fonduta di parmigiano,
-                    basilico e olio evo</p>
+                <p>Cornicione ripieno di ricotta, mozzarella, polpettine di carne, fonduta di parmigiano, basilico e olio evo</p>
             </div>
             <br>
             <div class="pietanza">
@@ -209,7 +222,7 @@
             </div>
             <br>
             <div class="pietanza">
-                <p>Dalia ............ 7,00€</p>
+                <p>Dalia ............ 9,50€</p>
                 <p>Crema di tartufo, salsiccia, funghi porcini, provola, basilico e olio evo</p>
             </div>
         </div>
@@ -285,7 +298,17 @@
             </div>
             <br>
             <div class="pietanza">
-                <p>Porchetta provola e patatine ............ 7,50€</p>
+                <p>Pizzatella ............ 6,00€</p>
+                <p>Nutella e zucchero a velo</p>
+            </div>
+            <br>
+            <div class="pietanza">
+                <p>Straccetti alla nutella ............ 6,00€</p>
+            </div>
+            <br>
+            <div class="pietanza">
+                <p>Straccetti al pistacchio ............ 7,00€</p>
+                <p>Nutella e zucchero a velo</p>
             </div>
         </div>
     </div>
@@ -302,11 +325,15 @@
             </div>
             <br>
             <div class="pietanza">
-                <p>Acqua frizzante ............ 2,00€</p>
+                <p>Acqua frizzante ............ 2,50€</p>
             </div>
             <br>
             <div class="pietanza">
                 <p>Coca Cola in bottiglia ............ 3,00€</p>
+            </div>
+            <br>
+            <div class="pietanza">
+                <p>Fanta in bottiglia ............ 3,00€</p>
             </div>
             <br>
             <div class="pietanza">
@@ -350,7 +377,15 @@
             </div>
             <br>
             <div class="pietanza">
-                <p>Coperto ............ 2,50€</p>
+                <p>Caffè ............ 1,50€</p>
+            </div>
+            <br>
+            <div class="pietanza">
+                <p>Liquori/Amari ............ 3,00€</p>
+            </div>
+            <br>
+            <div class="pietanza">
+                <p>Coperto ............ 1,50€</p>
             </div>
         </div>
     </div>
