add logo storia

--- a/index.html
+++ b/index.html
@@ -49,9 +49,7 @@
             <div class="dx">
                 <h2>La nostra <span class="color">Storia</span></h2>
                 <br>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, adipisci? Voluptatum amet atque dolorem repudiandae dignissimos, sint quibusdam consectetur
-                   neque temporibus iste dolorum quam optio ut, excepturi nemo! Reprehenderit, sunt quod? Odio repellat voluptatem, amet provident corrupti, perferendis odit vitae eveniet
-                   repellendus vel quis deleniti? Voluptates sequi nulla corporis et alias magni, quisquam quaerat culpa maiores necessitatibus consequatur autem totam facere reiciendis minus.
+                <p>Il nostro logo nasce con l’obiettivo di rappresentare la nostra famiglia. Le due foglie di basilico rappresentano papà Gianni e mamma Margherita, la mozzarella invece i tre figli Anthony, Noemi e Alessandro. La famiglia non è solo uno spazio fisico dove sentirsi al sicuro, ma anche il luogo degli affetti, delle relazioni profonde, la propria base sicura. Il clima familiare è importante per il benessere degli individui ed entrando nel nostro locale vorremmo portarvi un po’ nel nostro.
                 </p>
             </div>
         </div>
