--- a/menu.html
+++ b/menu.html
@@ -59,7 +59,7 @@
                 </div>
                 <br>
                 <div class="pietanza">
-                    <p>Frittatina pasta patate e provola 3€ .................. 3,00€</p>
+                    <p>Frittatina pasta patate e provola .................. 3,00€</p>
                 </div>
                 <br>
                 <div class="pietanza">
@@ -81,49 +81,71 @@
                 <div class="pietanza">
                     <p>Arancino porcini e provola .................. 2,50€</p>
                 </div>
-                <br>
-                <div class="pietanza">
-                    <p>Montanara pomodoro e parmigiano .................. 6,00€</p>
-                </div>
-                <br>
-                <div class="pietanza">
-                    <p>Montanara mortadella e pistacchio .................. 6,00€</p>
-                </div>
-                <br>
-                <div class="pietanza">
-                    <p>Montanara crema al tartufo e porcini .................. 6,00€</p>
-                </div>
-                <br>
-                <div class="pietanza">
-                    <p>Montanara crema di piselli e pancetta .................. 6,00€</p>
-                </div>
-                <br>
-                <div class="pietanza">
-                    <p>Arancino porcini e provola .................. 2,50€</p>
-                </div>
-                <br>
-                <div class="pietanza">
-                    <p>Patatina fritta stick .................. 2,50€</p>
-                </div>
-                <br>
-                <div class="pietanza">
-                    <p>Patatina fritta dippers .................. 3,00€</p>
-                </div>
-                <br>
-                <div class="pietanza">
-                    <p>Patatina fritta con wurstel .................. 4,00€</p>
-                </div>
-                <br>
-                <div class="pietanza">
-                    <p>Patatina fritta con bacon e cheddar .................. 4,50€</p>
-                </div>
             </div>
         </div>
    </section>
+
+
    <section id="menu">
     <div class="box">
         <br>
-        <p class="title">Pizze</p>
+        <p class="title">Le Patatine</p>
+        <hr>
+        <div class="container-menu">
+            <div class="pietanza">
+                <p>Patatina fritta stick .................. 2,50€</p>
+            </div>
+            <br>
+            <div class="pietanza">
+                <p>Patatina fritta dippers .................. 3,00€</p>
+            </div>
+            <br>
+            <div class="pietanza">
+                <p>Patatina fritta chips .................. 3,50€</p>
+            </div>
+            <br>
+            <div class="pietanza">
+                <p>Patatina fritta con Wurstel e Cheddar .................. 4,00€</p>
+            </div>
+            <br>
+            <div class="pietanza">
+                <p>Patatina fritta con Bacon e Cheddar .................. 4,50€</p>
+            </div>
+        </div>
+    </div>
+</section>
+
+
+<section id="menu">
+    <div class="box">
+        <br>
+        <p class="title">Le Montanare</p>
+        <hr>
+        <div class="container-menu">
+            <div class="pietanza">
+                <p>Tris di montanare .................. 6,00€</p>
+            </div>
+            <br>
+            <div class="pietanza">
+                <p>-Pomodoro e parmiggiano</p>
+            </div>
+            <br>
+            <div class="pietanza">
+                <p>- Mortadella e pistacchio</p>
+            </div>
+            <br>
+            <div class="pietanza">
+                <p>- Crema tartufo e porcini</p>
+            </div>
+        </div>
+    </div>
+</section>
+
+
+<section id="menu">
+    <div class="box">
+        <br>
+        <p class="title">Le nostre Pizze Classiche</p>
         <hr>
         <div class="container-menu">
             <div class="pietanza">
@@ -167,7 +189,7 @@
             </div>
             <br>
             <div class="pietanza">
-                <p>Crocco-pizza ............ 8,50€</p>
+                <p>Croccopizza ............ 8,50€</p>
                 <p>Patate al forno, provola, pancetta, funghi, crocchè, basilico e olio evo</p>
             </div>
             <br>
@@ -177,7 +199,7 @@
             </div>
             <br>
             <div class="pietanza">
-                <p>4 Formaggi ............ 8,00€</p>
+                <p>Quattro Formaggi ............ 8,00€</p>
                 <p>Caciocavallo, gorgonzola, emmenthal, parmigiano, basilico e olio evo</p>
             </div>
             <br>
@@ -205,7 +227,16 @@
                 <p>Pizzatella ............ 6,00€</p>
                 <p>Nutella e zucchero a velo</p>
             </div>
-            <br>
+        </div>
+    </div>
+</section>
+
+   <section id="menu">
+    <div class="box">
+        <br>
+        <p class="title">Le Pizze della Famiglia</p>
+        <hr>
+        <div class="container-menu">
             <div class="pietanza">
                 <p>Noemi ............ 10,00€</p>
                 <p>Cornicione ripieno di ricotta, mozzarella, polpettine di carne, fonduta di parmigiano, basilico e olio evo</p>
@@ -253,7 +284,6 @@
     </div>
 </section>
 
-
 <section id="menu">
     <div class="box">
         <br>
@@ -299,7 +329,6 @@
             <br>
             <div class="pietanza">
                 <p>Pizzatella ............ 6,00€</p>
-                <p>Nutella e zucchero a velo</p>
             </div>
             <br>
             <div class="pietanza">
@@ -308,7 +337,6 @@
             <br>
             <div class="pietanza">
                 <p>Straccetti al pistacchio ............ 7,00€</p>
-                <p>Nutella e zucchero a velo</p>
             </div>
         </div>
     </div>
