add social button

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <ul>
               <li><a href="index.html" class="current">Home</a></li>
               <li><a href="menu.html">Menù</a></li>
-              <li><a href="contact.html">Prova</a></li>
+              <li><a href="https://www.instagram.com/dalia_valori_di_famiglia/" target="_blank">Social</a></li>
             </ul>
           </nav>
     </header>
