--- a/menu.html
+++ b/menu.html
@@ -32,8 +32,8 @@
             </ul>
           </nav>
     </header>
-
-   <section id="menu">
+<section id="max">
+    <section id="menu">
         <div class="box">
             <p class="title">Antipasti & Fritti</p>
             <hr>
@@ -418,25 +418,8 @@
         </div>
     </div>
 </section>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+</section>
+   
 
 
     <footer>
