--- a/menu.html
+++ b/menu.html
@@ -239,7 +239,7 @@
         <div class="container-menu">
             <div class="pietanza">
                 <p>Noemi ............ 10,00€</p>
-                <p>Cornicione ripieno di ricotta, mozzarella, polpettine di carne, fonduta di parmigiano, basilico e olio evo</p>
+                <p>Pomodoro,Cornicione ripieno di ricotta, mozzarella, polpettine di carne, fonduta di parmigiano, basilico e olio evo</p>
             </div>
             <br>
             <div class="pietanza">
