--- a/menu.html
+++ b/menu.html
@@ -43,6 +43,10 @@
                 </div>
                 <br>
                 <div class="pietanza">
+                    <p>Prosciutto crudo e mozzarella di bufala ............ 10,00€</p>
+                </div>
+                <br>
+                <div class="pietanza">
                     <p>Polpettine al sugo ............ 3pz 4,00€ / 5pz 6,00€</p>
                 </div>
                 <br>
