--- a/menu.html
+++ b/menu.html
@@ -71,7 +71,7 @@
                 </div>
                 <br>
                 <div class="pietanza">
-                    <p>Crocchè Classico .................. 1,00€</p>
+                    <p>Crocchè Classico con mozzarella.................. 1,00€</p>
                 </div>
                 <br>
                 <div class="pietanza">
